--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.1.1/math.js"></script>
-    <script src="node_modules/evaluatex/dist/evaluatex.min.js" type="module"></script>
+    <script src="node_modules/evaluatex/dist/evaluatex.min.js"></script>
     <script src="autocorrect.js"></script>
     <script src="script.js"></script>
 </body>
